...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U31-kK-gIf" userLabel="PlayerPoints">
                                                        <rect key="frame" x="0.0" y="23" width="176" height="24"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="playerPointsLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                        <color key="textColor" systemColor="secondaryLabelColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yLE-mC-UHS" userLabel="CPUPoints">
                                                        <rect key="frame" x="0.0" y="23" width="176" height="25.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="cpuPointsLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                        <color key="textColor" systemColor="secondaryLabelColor"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gfe-7j-Uis" userLabel="Paper Button">
                                                <rect key="frame" x="123" y="0.0" width="106" height="106"/>
                                                <accessibility key="accessibilityConfiguration" identifier="paperButton" label="Paper"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="Gfe-7j-Uis" secondAttribute="height" id="cfE-zi-HKK"/>
...
                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uUy-Px-DMM" userLabel="Rock Button">
                                                        <rect key="frame" x="0.0" y="0.0" width="105.5" height="105.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="rockButton" label="Rock"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="uUy-Px-DMM" secondAttribute="height" id="Ko9-gp-7jg"/>
...
                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pv8-tr-QwY" userLabel="ScissorsButton">
                                                        <rect key="frame" x="145.5" y="0.0" width="105.5" height="105.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="scissorsButton" label="Scissors"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="Pv8-tr-QwY" secondAttribute="height" id="1hX-ll-Od6"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to play the game" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9hO-pb-lFb">
                                                <rect key="frame" x="35" y="62" width="282" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eUC-wP-4Zj">
                                                <rect key="frame" x="151" y="57.5" width="50" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="restartButton"/>
                                                <state key="normal" title="Restart"/>
                                                <connections>
...
